ash: Delete frame sinks when shell is destroyed.

Surface manager doesn't expect frame sinks to outlive it.

Bug: 774115
Test: exo_unittests --gtest_filter=BufferTest.SurfaceTreeHostDestruction
Change-Id: I48e2783ab840f5bfad35a0c80fb7cdd1fb216fcc
Reviewed-on: https://chromium-review.googlesource.com/716461
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508515}