components/exo/layer_tree_frame_sink_holder.h
@@ -69,7 +69,7 @@ class LayerTreeFrameSinkHolder : public cc::LayerTreeFrameSinkClient,
   void OnShellDestroyed() override;
 
  private:
-  void DeleteSoon();
+  void ScheduleDelete();
 
   // A collection of callbacks used to release resources.
   using ResourceReleaseCallbackMap =
@@ -85,6 +85,8 @@ class LayerTreeFrameSinkHolder : public cc::LayerTreeFrameSinkClient,
 
   gfx::Size last_frame_size_in_pixels_;
   float last_frame_device_scale_factor_ = 1.0f;
+
+  bool delete_pending_ = false;
 
   base::WeakPtrFactory<LayerTreeFrameSinkHolder> weak_ptr_factory_;
 
